the design is completly completed

--- a/index.html
+++ b/index.html
@@ -32,7 +32,38 @@
       <div>399,981</div>
     </div>
     <div class="keyPad">
-
+      <div class="row">
+        <div class="key del">del</div>
+        <div class="key">9</div>
+        <div class="key">8</div>
+        <div class="key">7</div>
+      </div>
+      <div class="row">
+        <div class="key">+</div>
+        <div class="key">6</div>
+        <div class="key">5</div>
+        <div class="key">4</div>
+      </div>
+      <div class="row">
+        <div class="key">-</div>
+        <div class="key">3</div>
+        <div class="key">2</div>
+        <div class="key">1</div>
+      </div>
+      <div class="row">
+        <div class="key additonRotate"><span>+</span></div>
+        <div class="key">/</div>
+        <div class="key">0</div>
+        <div class="key">.</div>
+      </div>
+      <div class="row">
+        <div class="bottomKey quality">
+          =
+        </div>
+        <div class="bottomKey reset">
+          reset
+        </div>
+      </div>
     </div>
   </main>
 </body>
