JS: store the operators and the operands we want to calculate in arrays

--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
         </div>
       </div>
     </header>
-    <div class="screen">
-      <div>399,981</div>
-    </div>
+    <div class="screen"></div>
     <div class="keyPad">
       <div class="row">
         <div class="key del">del</div>
@@ -51,7 +49,7 @@
         <div class="key">1</div>
       </div>
       <div class="row">
-        <div class="key additonRotate"><span>+</span></div>
+        <div class="key">*</div>
         <div class="key">/</div>
         <div class="key">0</div>
         <div class="key">.</div>
