update js, css, README.md and html files

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <title>Frontend Mentor | Calculator app</title>
 </head>
-<body>
+<body class="mainBg_theme1">
   <main class="calculator">
-    <header class="headerContainer">
-      <h1>calc</h1>
+    <header class="headerContainer txtClr2_theme1">
+      <h1 class="txt">calc</h1>
       <div class="modeContainer">
-        <h2>THEME</h2>
+        <h2 class="txt">THEME</h2>
         <div class="mode">
-          <h5 class="modeNum">
+          <h5 class="modeNum txt">
             <span class="firstTheme">1</span>  
             <span class="secondTheme">2</span> 
-            <span class="thirsTheme">3</span> 
+            <span class="thirdTheme">3</span> 
           </h5>
           <div class="pickMode">
             <div class="circle"></div>
