update files : rewriting the code more clearly

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <!-- css file -->
   <link rel="stylesheet" href="./assets/styles/index.css">
   <!-- js file -->
-  <script src="./assets/js/index.js" defer></script>
+  <script src="./assets/js/test.js" defer></script>
+  <!-- <script src="./assets/js/index.js" defer></script> -->
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <title>Frontend Mentor | Calculator app</title>
 </head>
@@ -49,18 +50,14 @@
         <div class="key">1</div>
       </div>
       <div class="row">
-        <div class="key">*</div>
-        <div class="key">/</div>
+        <div class="key">&times;</div>
+        <div class="key">&divide;</div>
         <div class="key">0</div>
         <div class="key">.</div>
       </div>
       <div class="row">
-        <div class="bottomKey quality">
-          =
-        </div>
-        <div class="bottomKey reset">
-          reset
-        </div>
+        <div class="key bottomKey quality">&equals;</div>
+        <div class="key bottomKey reset">reset</div>
       </div>
     </div>
   </main>
