--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <h2 class="txt">THEME</h2>
         <div class="mode">
           <h5 class="modeNum txt">
-            <span class="firstTheme">1</span>  
-            <span class="secondTheme">2</span> 
-            <span class="thirdTheme">3</span> 
+            <span class="theme">1</span>  
+            <span class="theme secondTheme">2</span> 
+            <span class="theme">3</span> 
           </h5>
           <div class="pickMode">
             <div class="circle"></div>
@@ -56,8 +56,8 @@
         <div class="key">.</div>
       </div>
       <div class="row">
-        <div class="key bottomKey quality">&equals;</div>
-        <div class="key bottomKey reset">reset</div>
+        <div class="key quality bottomKey">&equals;</div>
+        <div class="key reset bottomKey">reset</div>
       </div>
     </div>
   </main>
