--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- css file -->
   <link rel="stylesheet" href="./assets/styles/index.css">
   <!-- js file -->
-  <script src="./assets/js/test.js" defer></script>
+  <script src="./assets/js/index.js" defer></script>
   <!-- <script src="./assets/js/index.js" defer></script> -->
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <title>Frontend Mentor | Calculator app</title>
